--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,9 +1,26 @@
 workflows:
+  sample-workflow:
+    name: Codemagic Sample Workflow
 
-    sample-workflow:
+    max_build_duration: 120
 
-        name: Codemagic Sample Workflow
+    instance_type: mac_mini_m2
 
-        max_build_duration: 120
+    environment:
+      node: v18.17.0
+      android_sdk: "33.0.0"
+      java: 11
 
-        instance_type: mac_mini_m2
+    scripts:
+      - name: Install dependencies
+        script: |
+          npm install
+
+      - name: Build Android APK
+        script: |
+          npx expo prebuild
+          cd android
+          ./gradlew assembleRelease
+
+    artifacts:
+      - android/app/build/outputs/apk/release/*.apk
